Alignment issue fix in food error message box. The list items were centered but not aligned. Fixed with this commit.

--- a/css/foodStyle.css
+++ b/css/foodStyle.css
@@ -149,3 +149,8 @@ button{
 text-align: left;
 
 }
+
+.errors{
+	text-align: left;
+	margin:0 auto;	
+}
